# SpreadLab

./: .gitignore  Cargo.toml  PLAN.md  README.md  handout.md
.github/workflows/: ci.yml
src/: api.rs  damage_bridge.rs  data.rs  lib.rs  main.rs  optimize.rs  showdown.rs  smogon.rs  spreads.rs  stats.rs  wasm.rs
src/web/: mod.rs
src/web/static/: app.css  app.js  index.html
