[package]
name = "spreadlab-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Alpha Pokemon Champions Stat Point optimizer CLI and library"
repository = "https://github.com/D35P4C1T0/SpreadLab"
homepage = "https://github.com/D35P4C1T0/SpreadLab"
readme = "README.md"
keywords = ["pokemon", "champions", "optimizer", "vgc"]
categories = ["command-line-utilities"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
damage_calc = { package = "pkmn-dmg-lib", git = "https://github.com/D35P4C1T0/pkmn-dmg-lib-rs.git", rev = "f415eb36b2899795e0908f9fb3ae1fae242a0968", features = ["serde"] }

[patch."https://github.com/D35P4C1T0/pkmn-dmg-lib-rs.git"]
pkmn-dmg-lib = { path = "../pkmn-dmg-lib" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[features]
default = []

[dev-dependencies]
tempfile = "3"
